# mass-fragment-index

./: Cargo.toml
bindings/pyfragment_index/: .gitignore  Cargo.toml  pyproject.toml
bindings/pyfragment_index/src/: lib.rs
examples/: on_disk_spectrum.rs  spectrum_index.rs
src/: fragment.rs  index.rs  interval.rs  lib.rs  main.rs  match.rs  parent.rs  peak.rs  sort.rs  storage.rs
src/storage/: fragment_parquet.rs  peak_parquet.rs  split.rs  util.rs
tests/: test.rs  test_frag_index_writer.rs
tests/data/: generate_data.py  test_data.csv
