[package]
name = "mass-fragment-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[lib]

[[example]]
name = "spectrum_index"
required-features = [
    "binary_storage"
]


[dev-dependencies]
csv = "1.2.2"
pretty_assertions = "1.3.0"
rand = "0.8.5"
rayon = { version = "1.7.0"}
mzdata = { version = "0.8.0" }

[features]
default = ["binary_storage"]
serialize = ["serde", ]
binary_storage = ["arrow", "parquet"]

[dependencies]
serde = { version = "1.0.171", optional = true , features = ["derive"]}
arrow = { version = "50.0.0", optional = true}
parquet ={ version = "50.0.0", features = ["zstd", "arrow"], optional = true}
itertools = "0.12.0"
