[package]
name = "mass-fragment-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[lib]

[[example]]
name = "spectrum_index"
required-features = [
    "binary_storage"
]


[dev-dependencies]
csv = "1.2.2"
pretty_assertions = "1.3.0"
rand = "0.8.5"
rayon = { version = "1.10.0"}
mzdata = { version = "0.20.0" }
tempfile = "3.10"
pretty_env_logger = "0.5.0"

[features]
default = ["binary_storage", "parallelism"]
serialize = ["serde", ]
binary_storage = ["arrow", "parquet"]
parallelism = ["rayon"]

[dependencies]
serde = { version = "1.0.203", optional = true , features = ["derive"]}
arrow = { version = "52.2.0", optional = true}
parquet ={ version = "52.2.0", features = ["zstd", "arrow"], optional = true}
itertools = "0.13.0"
rayon = { version = "1.10.0", optional = true}
log = "0.4.22"
