[package]
name = "pyfragment_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfragment_index"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18.1", features=["extension-module"]}
mass-fragment-index = { path = "../../", version = "0.1.0", features = ["serialize"]}
serde = { version = "1.0.171", features = ["derive"]}
rmp-serde = "1.1.2"
zstd = "0.12.4"
